@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.23.
-.TH MBCHK "1" "February 2002" "mbchk (GNU GRUB 0.91)" FSF
+.TH MBCHK "1" "March 2002" "mbchk (GNU GRUB 0.91)" FSF
 .SH NAME
 mbchk \- check the format of a Multiboot kernel
 .SH SYNOPSIS
